// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toSetRolePermission operation should fail due to invalid permission value 1`] = `
Object {
  "message": "    
    - Expected  - 62
    + Received  +  1
    
      Array [
    -   \\"1\\",
    -   \\"2\\",
    -   \\"4\\",
    -   \\"8\\",
    -   \\"16\\",
    -   \\"32\\",
    -   \\"64\\",
    -   \\"128\\",
    -   \\"256\\",
    -   \\"512\\",
    -   \\"1024\\",
    -   \\"2048\\",
    -   \\"4096\\",
    -   \\"8192\\",
    -   \\"16384\\",
    -   \\"32768\\",
    -   \\"65536\\",
    -   \\"131072\\",
    -   \\"262144\\",
    -   \\"524288\\",
    -   \\"1048576\\",
    -   \\"2097152\\",
    -   \\"4194304\\",
    -   \\"8388608\\",
    -   \\"16777216\\",
    -   \\"33554432\\",
    -   \\"67108864\\",
    -   \\"134217728\\",
    -   \\"268435456\\",
    -   \\"536870912\\",
    -   \\"1073741824\\",
    -   \\"CREATE_INSTANT_INVITE\\",
    -   \\"KICK_MEMBERS\\",
    -   \\"BAN_MEMBERS\\",
    -   \\"ADMINISTRATOR\\",
    -   \\"MANAGE_CHANNELS\\",
    -   \\"MANAGE_GUILD\\",
    -   \\"ADD_REACTIONS\\",
    -   \\"VIEW_AUDIT_LOG\\",
    -   \\"VIEW_CHANNEL\\",
    -   \\"SEND_MESSAGES\\",
    -   \\"SEND_TTS_MESSAGES\\",
    -   \\"MANAGE_MESSAGES\\",
    -   \\"EMBED_LINKS\\",
    -   \\"ATTACH_FILES\\",
    -   \\"READ_MESSAGE_HISTORY\\",
    -   \\"MENTION_EVERYONE\\",
    -   \\"USE_EXTERNAL_EMOJIS\\",
    -   \\"CONNECT\\",
    -   \\"SPEAK\\",
    -   \\"MUTE_MEMBERS\\",
    -   \\"DEAFEN_MEMBERS\\",
    -   \\"MOVE_MEMBERS\\",
    -   \\"USE_VAD\\",
    -   \\"PRIORITY_SPEAKER\\",
    -   \\"CHANGE_NICKNAME\\",
    -   \\"MANAGE_NICKNAMES\\",
    -   \\"MANAGE_ROLES\\",
    -   \\"MANAGE_WEBHOOKS\\",
    -   \\"MANAGE_EMOJIS\\",
    -   \\"STREAM\\",
    -   \\"VIEW_GUILD_INSIGHTS\\",
    +   \\"BANANA\\",
      ]
",
  "pass": false,
  "testName": "toSetRolePermission",
}
`;

exports[`testing toSetRolePermission operation should fail due to role permissions was not updated 1`] = `
Object {
  "message": "    
    expected: role permissions change to: ATTACH_FILES
    received: permissions were not changed
",
  "pass": false,
}
`;

exports[`testing toSetRolePermission operation should fail due to undefined roleIdentifier 1`] = `
Object {
  "message": "    
    expected: data to identifier the role (id or name)
    received: null
",
  "pass": false,
  "testName": "toSetRolePermission",
}
`;

exports[`testing toSetRolePermission operation should return a failed test due to failure in message sending 1`] = `
Object {
  "message": "    
    can not send message to channel x
",
  "pass": false,
  "testName": "toSetRolePermission",
}
`;

exports[`testing toSetRolePermission operation should return a not passed test due expected name did not match to received 1`] = `
Object {
  "message": "    
    expected: role permissions change to: ATTACH_FILES
    received: ADMINISTRATOR (and 30 others)
",
  "pass": false,
  "testName": "toSetRolePermission",
}
`;

exports[`testing toSetRolePermission operation should return a not passed test due expected name did not match to received 2`] = `
Object {
  "message": "    
    expected: role permissions change to: null
    received: ADMINISTRATOR (and 30 others)
",
  "pass": false,
  "testName": "toSetRolePermission",
}
`;

exports[`testing toSetRolePermission operation should return a not passed test due to permissions should not change (isNot true) 1`] = `
Object {
  "message": "    
    expected: role permissions not change to: ADMINISTRATOR
    received: ADMINISTRATOR (and 30 others)
",
  "pass": false,
  "testName": "toSetRolePermission",
}
`;

exports[`testing toSetRolePermission operation should return a not passed test due to permissions should not change (isNot true) 2`] = `
Object {
  "message": "    
    expected: role permissions not change to: ADMINISTRATOR and BAN_MEMBERS
    received: ADMINISTRATOR (and 30 others)
",
  "pass": false,
  "testName": "toSetRolePermission",
}
`;

exports[`testing toSetRolePermission operation should return a not passed test due to permissions should not change (isNot true) 3`] = `
Object {
  "message": "    
    expected: role permissions not change to: ADMINISTRATOR (and 2 others)
    received: ADMINISTRATOR (and 30 others)
",
  "pass": false,
  "testName": "toSetRolePermission",
}
`;

exports[`testing toSetRolePermission operation should return false due to invalid permission parameter (object) 1`] = `
Object {
  "message": "    
    expected: permissions to be null, undefined or an array
    received: object
",
  "pass": false,
  "testName": "toSetRolePermission",
}
`;

exports[`testing toSetRolePermission operation should return false due to invalid permission parameter (undefined) 1`] = `
Object {
  "message": "    
    expected: permissions to be null, undefined or an array
    received: object
",
  "pass": false,
  "testName": "toSetRolePermission",
}
`;

exports[`testing toSetRolePermission operation should return false due to not found role 1`] = `
Object {
  "message": "    
    expected: role with id 123
    received: null
",
  "pass": false,
  "testName": "toSetRolePermission",
}
`;

exports[`testing toSetRolePermission operation should return true due to isNot true and no role change 1`] = `
Object {
  "pass": true,
  "testName": "toSetRolePermission",
}
`;

exports[`testing toSetRolePermission operation should return true due to role changed permissions (isNot false) 1`] = `
Object {
  "pass": true,
  "testName": "toSetRolePermission",
}
`;
